--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
+{% load static %}
 
+
+{% block css %}
+    <link rel="stylesheet" href="{% static 'en/css/product-details.css' %}">
+{% endblock css %}
 
 {% block body %}
 
 
-
+ 
         <!--=====================================
                     BANNER PART START
         =======================================-->
