--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -1769,7 +1769,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-btn-25">
-                            <a href="shop-4column.html" class="btn btn-outline">
+                            <a href="/products/" class="btn btn-outline">
                                 <i class="fas fa-eye"></i>
                                 <span>show more</span>
                             </a>
@@ -1814,7 +1814,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-btn-50">
-                            <a href="/products/brands" class="btn btn-outline">
+                            <a href="/products/brands/" class="btn btn-outline">
                                 <i class="fas fa-eye"></i>
                                 <span>view all brands</span>
                             </a>
