show order data in template

--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
                                     
                                 </li>
                                 <li class="navbar-item ">
-                                    <a class="navbar-link" href="/order">Orders</a>
+                                    <a class="navbar-link" href="/orders">Orders</a>
                                    
                                 </li>
                          
@@ -463,12 +463,7 @@
                 </li>
             </ul>
             <div class="cart-footer">
-                <button class="coupon-btn">Do you have a coupon code?</button>
-                <form class="coupon-form">
-                    <input type="text" placeholder="Enter your coupon code">
-                    <button type="submit"><span>apply</span></button>
-                </form>
-                <a class="cart-checkout-btn" href="checkout.html">
+                <a class="cart-checkout-btn" href="checkout">
                     <span class="checkout-label">Proceed to Checkout</span>
                     <span class="checkout-price">$369.78</span>
                 </a>
