--- a/templates/base.html
+++ b/templates/base.html
@@ -361,28 +361,42 @@
                 <button class="cart-close"><i class="icofont-close"></i></button>
             </div>
             <ul class="cart-list">
-                {% for object in cart_detail_data  %}
-                    <li class="cart-item">
-                        <div class="cart-media">
-                            <a href="#"><img src="{{object.product.image.url}}" alt="product"></a>
-                            <button class="cart-delete"><i class="far fa-trash-alt"></i></button>
-                        </div>
-                        <div class="cart-info-group">
-                            <div class="cart-info">
-                                <h6><a href="product-single.html">{{object.product}}</a></h6>
-                                <p>Unit Price - ${{object.product.price}}</p>
-                            </div>
-                            <div class="cart-action-group">
-                                <div class="product-action">
-                                    <button class="action-minus" title="Quantity Minus"><i class="icofont-minus"></i></button>
-                                    <input class="action-input" title="Quantity Number" type="text" name="quantity" value="{{object.quantity}}">
-                                    <button class="action-plus" title="Quantity Plus"><i class="icofont-plus"></i></button>
-                                </div>
-                                <h6>${{object.total}}</h6>
-                            </div>
-                        </div>
-                    </li> 
-                {% endfor %} 
+                {% for object in cart_detail_data %}
+                <li class="cart-item">
+                  <div class="cart-media">
+                    <a href="#"
+                      ><img src="{{object.product.image.url}}" alt="product"
+                    /></a>
+                    <button class="cart-delete">
+                      <i class="far fa-trash-alt"></i>
+                    </button>
+                  </div>
+                  <div class="cart-info-group">
+                    <div class="cart-info">
+                      <h6><a href="product-single.html">{{object.product}}</a></h6>
+                      <p>Unit Price - ${{object.product.price}}</p>
+                    </div>
+                    <div class="cart-action-group">
+                      <div class="product-action">
+                        <button class="action-minus" title="Quantity Minus">
+                          <i class="icofont-minus"></i>
+                        </button>
+                        <input
+                          class="action-input"
+                          title="Quantity Number"
+                          type="text"
+                          name="quantity"
+                          value="{{object.quantity}}"
+                        />
+                        <button class="action-plus" title="Quantity Plus">
+                          <i class="icofont-plus"></i>
+                        </button>
+                      </div>
+                      <h6>${{object.total}}</h6>
+                    </div>
+                  </div>
+                </li>
+                {% endfor %}
             </ul>
             <div class="cart-footer">
                 <a class="cart-checkout-btn" href="checkout">
