--- a/templates/base.html
+++ b/templates/base.html
@@ -132,7 +132,7 @@
                         <button class="header-widget header-cart" title="Cartlist">
                             <i class="fas fa-shopping-basket"></i>
                             <sup>9+</sup>
-                            <span>total price<small>$345.00</small></span>
+                            <span>total price<small>${{cart_data.cart_total}}</small></span>
                         </button>
                     </div>
                 </div>
@@ -401,7 +401,7 @@
             <div class="cart-footer">
                 <a class="cart-checkout-btn" href="checkout">
                     <span class="checkout-label">Proceed to Checkout</span>
-                    <span class="checkout-price">$369.78</span>
+                    <span class="checkout-price">${{cart_data.cart_total}}</span>
                 </a>
             </div>
         </aside>
