--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -34,11 +34,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="alert-info">
-                            <p>Returning customer? <a href="login.html">Click here to login</a></p>
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
                         <div class="account-card">
                             <div class="account-title">
                                 <h4>Your order</h4>
@@ -90,7 +85,7 @@
                                         </li>
                                         <li>
                                             <span>delivery fee</span>
-                                            <span>$10.00</span>
+                                            <span>${{delivery_fee}}</span>
                                         </li>
                                         <li>
                                             <span>discount</span>
