--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -81,7 +81,7 @@
                                     <ul>
                                         <li>
                                             <span>Sub total</span>
-                                            <span>$267.45</span>
+                                            <span>${{sub_total}}</span>
                                         </li>
                                         <li>
                                             <span>delivery fee</span>
@@ -93,7 +93,7 @@
                                         </li>
                                         <li>
                                             <span>Total<small>(Incl. VAT)</small></span>
-                                            <span>$277.00</span>
+                                            <span>${{total}}</span>
                                         </li>
                                     </ul>
                                 </div>
