show productsin debug.html ,The products show,the price of thim is more than 90

--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <ul>
-        {% for objekt in data  %}
-        <li>{{objekt}}</li>  
+        {% for object in data  %}
+        <li>{{object}} {{object.price}}</li>  
         {% endfor %}
     
         
