ordering the products by price(regressive) and show just the first product  (with reverse)

--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-        {% for object in data  %}
-        <li>{{object}} {{object.price}}</li>  
-        {% endfor %}
+        
+        <li>{{data}}</li>  
+     
     
         
     </ul>
