query show just name and price values

--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-        
-        <li>{{data}}</li>  
-     
+        {% for object in data  %}
+        <li>{{object.name}} {{object.price}}</li>  
+        {% endfor %}
     
         
     </ul>
