query show just name and price values wiht only,and we added brand to debug.html(that ist not good mehtod.it need a long time and we have many query ,what we dont need )

--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         {% for object in data  %}
-        <li>{{object.name}} {{object.price}}</li>  
+        <li>{{object.name}} {{object.price}}{{object.brand}}</li>  
         {% endfor %}
     
         
