--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         {% for object in data  %}
-        <li>{{object.name}} {{object.price}}</li>  
+        <li>{{object.name}} {{object.brand}}</li>  
         {% endfor %}
     
         
