--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -73,11 +74,25 @@
                         <div class="header-top-select">
                             <div class="header-select">
                                 <i class="icofont-world"></i>
-                                <select class="select">
-                                    <option value="english" selected>english</option>
-                                    <option value="bangali">bangali</option>
-                                    <option value="arabic">arabic</option>
-                                </select>
+                                <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                                    <input name="next" type="hidden" value="{{ redirect_to }}">
+                                    <select name="language"  class="select">
+                                        {% get_current_language as LANGUAGE_CODE %}
+                                        {% get_available_languages as LANGUAGES %}
+                                        {% get_language_info_list for LANGUAGES as languages %}
+                                        {% for language in languages %}
+                                            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                                                {{ language.name_local }} ({{ language.code }})
+                                            </option>
+                                        {% endfor %}
+                                    </select>
+                                    <input type="submit" value="Go">
+                                </form>
+
+
+
+
+
                             </div>
                             
                         </div>
@@ -153,17 +168,17 @@
                         <div class="navbar-content">
                             <ul class="navbar-list">
                                 <li class="navbar-item ">
-                                    <a class="navbar-link " href="/">home</a>
+                                    <a class="navbar-link " href="/">{% translate "home" %}</a>
                                 </li>
                                 <li class="navbar-item">
-                                    <a class="navbar-link" href="/products">shop</a>
+                                    <a class="navbar-link" href="/products">{% translate "shop" %}</a>
                                      </li>
                                 <li class="navbar-item">
-                                    <a class="navbar-link" href="/products/brands/">brands</a>
+                                    <a class="navbar-link" href="/products/brands/">{% translate "brands" %}</a>
                                     
                                 </li>
                                 <li class="navbar-item ">
-                                    <a class="navbar-link" href="/orders">Orders</a>
+                                    <a class="navbar-link" href="/orders">{% translate "Orders" %}</a>
                                    
                                 </li>
                          
@@ -172,14 +187,14 @@
                                 <div class="navbar-info">
                                     <i class="icofont-ui-touch-phone"></i>
                                     <p>
-                                        <small>call us</small>
+                                        <small>{% translate "call us" %}</small>
                                         <span>{{company_data.call_us}}</span>
                                     </p>
                                 </div>
                                 <div class="navbar-info">
                                     <i class="icofont-ui-email"></i>
                                     <p>
-                                        <small>email us</small>
+                                        <small>{% translate "email us" %}</small>
                                         <span>{{company_data.email_us}}</span>
                                     </p>
                                 </div>
