add germany Language

--- a/templates/base.html
+++ b/templates/base.html
@@ -174,7 +174,7 @@
                                     <a class="navbar-link" href="/products">{% translate "shop" %}</a>
                                      </li>
                                 <li class="navbar-item">
-                                    <a class="navbar-link" href="/products/brands/">{% translate "brands" %}</a>
+                                    <a class="navbar-link" href="/products/brands/">{% translate "brand" %}</a>
                                     
                                 </li>
                                 <li class="navbar-item ">
