--- a/accounts/templates/registration/activate.html
+++ b/accounts/templates/registration/activate.html
@@ -1,1 +1,7 @@
-{{form}}
+<form method="post">
+    {% csrf_token %}
+    {{form}}
+     
+     <input type='submit' value='activate'>
+     
+  </form>
