--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% extends "auth_base.html" %}
+{% load django_bootstrap5 %}
 {% block body %}
 
 
@@ -24,7 +25,9 @@
                                 <div class="user-form-divider">
                                     <p>or</p>
                                 </div>
-                                <form class="user-form">
+                                <form class="user-form" method='post'>
+                                    {% csrf_token %}
+                                    {% bootstrap_form form %}
                                     <div class="form-button">
                                         <button type="submit">Signup</button>
                                         <p>Forgot your password?<a href="reset-password.html">reset here</a></p>
