--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -1,8 +1,34 @@
-<form action="" method="post">
-    {% csrf_token %}
-    {% if form.email.errors %}
-      {{ form.email.errors }}
-    {% endif %}
-        <p>{{ form.email }}</p>
-      <input type="submit" class="btn btn-default btn-lg" value="Reset password">
-    </form>
+{% extends "auth_base.html" %}
+{% load django_bootstrap5 %}
+{% block body %}
+        <section class="user-form-part">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
+                        <div class="user-form-logo">
+                            <a href="/"><img src="{{company_data.logo.url}}" alt="logo"></a>
+                        </div>
+                        <div class="user-form-card">
+                            <div class="user-form-title">
+                                <h2>worried?</h2>
+                                <p>No Problem! Just Follow The Simple Way</p>
+                            </div>
+                            <form class="user-form" method="post">
+                              {% csrf_token %}
+                              {% bootstrap_form form %}
+                                <div class="form-button">
+                                    <button type="submit">get reset link</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="user-form-remind">
+                            <p>Go Back To<a href="/accounts/login">login here</a></p>
+                        </div>
+                        <div class="user-form-footer">
+                            <p>Greeny | &COPY; Copyright by <a href="#">{{company_data.name}}</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+ {% endblock body %}
