--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -131,28 +131,7 @@
                        <div class="product-details-frame">
                             <h3 class="frame-title">Reviews (2)</h3>
                             <ul class="review-list">
-                                {% for review in reviews  %}
-                                    <li class="review-item">
-                                        <div class="review-media">
-                                            <a class="review-avatar" href="#">
-                                                <img src="images/avatar/01.jpg" alt="review">
-                                            </a>
-                                            <h5 class="review-meta">
-                                                <a href="#">{{review.user}}</a>
-                                                <span>June 02, 2020</span>
-                                            </h5>
-                                        </div>
-                                        <ul class="review-rating">
-                                            <li class="icofont-ui-{% if review.rate > 0 %}rating{% else %}{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 1 %}rating{% else %}{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 2 %}rating{% else %}{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 3 %}rating{% else %}{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 4 %}rating{% else %}{% endif %}"></li>
-                                        </ul>
-                                        <p class="review-desc">{{review.review}}</p>
-                                    
-                                    </li>
-                                {% endfor %}
+                                {% include 'includes/product_reviews.html' %}
                             </ul>
                         </div>
                         <div class="product-details-frame">
