--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -89,7 +89,7 @@
                                 </ul>
                             </div>
                             <div class="details-add-group ">
-                                <form action="/orders/add-to-cart" method="post" class="row">
+                                <form id='add_to_cart' action="/orders/add-to-cart" method="post" class="row">
                                     {% csrf_token %}
                                     <div class="col-lg-6">
                                         <input class="action-input" type="number" name="quantity" value="1">
@@ -688,7 +688,7 @@
         
         <script>
             $(document).ready(function(){ //wenn die seite geöffnet wird,wird funktion ausgerufen
-                
+                //add review
                 $(document).on('submit','#reviewForm',function(event){ //wenn ich auf submit für den 'reviewForm'drücke,wird event aktiviert
                     // stop refresh  
                     event.preventDefault();
@@ -709,6 +709,29 @@
                     })
 
                 })
+
+                //add_to_cart
+                $(document).on('submit','#add_to_cart',function(event){ 
+                // stop refresh  
+                event.preventDefault();
+
+                // ajax 
+                $.ajax({
+                    type: $(this).attr('method') , 
+                    url: $(this).attr('action') , 
+                    data: $(this).serialize(),   
+                    dataType: 'json',            
+                    success:function(response){    
+                        $('#cart_sidebar').html(response['result'])
+                        
+                    },
+                    error:function(){              
+
+                    }
+                })
+
+            })
+
 
             })
         </script>
