--- a/templates/base.html
+++ b/templates/base.html
@@ -423,7 +423,9 @@
         <!--=====================================
                   CART SIDEBAR PART START
         =======================================-->
+        <aside class="cart-sidebar" id='cart_sidebar'>
             {% include 'includes/cart_sidebar.html' %}
+        </aside>
         <!--=====================================
                     CART SIDEBAR PART END
         =======================================-->
