show total in navbar

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -723,7 +723,9 @@
                     dataType: 'json',            
                     success:function(response){    
                         $('#cart_sidebar').html(response['result'])
-                        
+
+                        var total = $('#total_price')
+                        total.text(response['total'])
                     },
                     error:function(){              
 
