show cart_count in navbar

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -726,6 +726,9 @@
 
                         var total = $('#total_price')
                         total.text(response['total'])
+
+                        var total = $('#cart_count')
+                        total.text(response['cart_count'])
                     },
                     error:function(){              
 
