--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -729,6 +729,8 @@
 
                         var total = $('#cart_count')
                         total.text(response['cart_count'])
+
+                        $(".product-add").css("display","block")
                     },
                     error:function(){              
 
