--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -214,6 +214,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-lg-4 mx-auto">
+                            <button class="btn w-100" type="button">Pay</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
