add ajax in checkout and create failed.html

--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -216,7 +216,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4 mx-auto">
-                            <button class="btn w-100" type="button">Pay</button>
+                            <button class="btn w-100" onclick="buy(event)" type="button">Pay</button>
                         </div>
                     </div>
                 </div>
@@ -370,7 +370,18 @@
         <!--=====================================
                     MODAL EDIT FORM END
         =======================================-->
+            <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
+            <script>
+                function buy(event){
+                    event.preventDefault();
+                    console.log('buy')
+                }
+
+
+
+
+            </script>
 
         {% endblock body %}
 
