--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -371,7 +371,7 @@
                     MODAL EDIT FORM END
         =======================================-->
             <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
+            <script src="https://js.stripe.com/v3/"></script>
             <script>
                 function buy(event){
                     event.preventDefault();
