--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -375,13 +375,25 @@
             <script>
                 function buy(event){
                     event.preventDefault();
-                    console.log('buy')
-                }
-
-
-
-
-            </script>
+                    console.log('buy ');
+        
+            var stripe = Stripe('{{pub_key}}');
+        
+            fetch('/orders/checkout/payment', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}'
+              }
+            }).then(function(response) {
+              return response.json();
+            }).then(function(session) {
+              return stripe.redirectToCheckout({ sessionId: session.session.id });
+            }).catch(function(error) {
+              console.error('Error:', error);
+            });
+          }
+        </script>
 
         {% endblock body %}
 
