--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -72,31 +72,14 @@
                                 </div>
                                 <div class="chekout-coupon">
                                     <button class="coupon-btn">Do you have a coupon code?</button>
-                                    <form class="coupon-form" method="post">
+                                    <form class="coupon-form" method="post" id='couponForm'>
                                         {% csrf_token %}
                                         <input type="text" name="coupon_code" placeholder="Enter your coupon code">
                                         <button type="submit"><span>apply</span></button>
                                     </form>
                                 </div>
-                                <div class="checkout-charge">
-                                    <ul>
-                                        <li>
-                                            <span>Sub total</span>
-                                            <span>${{sub_total}}</span>
-                                        </li>
-                                        <li>
-                                            <span>delivery fee</span>
-                                            <span>${{delivery_fee}}</span>
-                                        </li>
-                                        <li>
-                                            <span>discount</span>
-                                            <span>${{discount}}</span>
-                                        </li>
-                                        <li>
-                                            <span>Total<small>(Incl. VAT)</small></span>
-                                            <span>${{total}}</span>
-                                        </li>
-                                    </ul>
+                                <div class="checkout-charge"  id="total_div">
+                                    {% include "includes/checkout_table.html" %}
                                 </div>
                             </div>
                         </div>
@@ -395,6 +378,33 @@
           }
         </script>
 
+
+        <script>
+            $(document).ready(function(){
+                
+                // add review 
+                $(document).on('submit','#couponForm',function(event){
+                    // stop refresh 
+                    event.preventDefault();
+  
+                    // ajax 
+                    $.ajax({
+                        type: $(this).attr('method') ,
+                        url: $(this).attr('action') ,
+                        data: $(this).serialize(),
+                        dataType: 'json',
+                        success:function(response){
+                            $('#total_div').html(response['result'])
+                        },
+                        error:function(){
+  
+                        }
+                    })
+  
+                })
+              })
+  
+          </script>       
         {% endblock body %}
 
 
